Fixed off-center movie cards in sidebar

--- a/src/style.css
+++ b/src/style.css
@@ -141,7 +141,7 @@ body {
 .sidebarTable {
   display: flex;
   flex-direction: column;
-
+  align-items: center;
   gap: calc(var(--SIZE-margin)*2);
   padding: calc(var(--SIZE-margin)*2);
 
@@ -278,6 +278,7 @@ body {
 .removeAllButtonContainer {
   margin-top: 10px;
   margin-left: 10px;
+  margin-right: 10px;
   gap: 10px;
 }
 
@@ -364,7 +365,6 @@ body {
 .searchResultCard {
 
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-
   border-radius: 10px;
   overflow: hidden;
 }
